# PLAMIO

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  llms.txt
games/AquaDrop/: AquaDrop.cpp  AquaDrop.h
games/CyberBeat/: CyberBeat.cpp  CyberBeat.h
games/GroundFront/: GroundFront.cpp  GroundFront.h
games/NeonReversi/: NeonReversi.cpp  NeonReversi.h
games/SignalLost/: SignalLost.cpp  SignalLost.h
games/VectorFlite/: VectorFlite.cpp  VectorFlite.h
samples/CollisionLab/: CollisionLab.cpp  CollisionLab.h
samples/FireEffect/: FireEffect.cpp  FireEffect.h
samples/GameTemplate/: GameTemplate.cpp  GameTemplate.h
samples/ParticleLab/: ParticleLab.cpp  ParticleLab.h
samples/PlamioAPIs/: PlamioAPIs.cpp  PlamioAPIs.h
samples/PlamioAPIsSSD1306/: PlamioAPIsSSD1306.cpp  PlamioAPIsSSD1306.h
samples/SL/: SL.cpp  SL.h
samples/Software3D/: Software3D.cpp  Software3D.h
samples/SoundTile/: SoundTile.cpp  SoundTile.h
samples/SpriteAdventure/: SpriteAdventure.cpp  SpriteAdventure.h
samples/TinyStarfield/: TinyStarfield.cpp  TinyStarfield.h
samples/WaterRipple/: WaterRipple.cpp  WaterRipple.h
samples/WireframeTunnel/: WireframeTunnel.cpp  WireframeTunnel.h
samples/tools/PLAMIOMusicEditor/: PLAMIOMusicEditor.cpp  PLAMIOMusicEditor.h
samples/tools/PLAMIOSoundEffectEditor/: PLAMIOSoundEffectEditor.cpp  PLAMIOSoundEffectEditor.h
samples/tools/PLAMIOSpriteEditor/: PLAMIOSpriteEditor.cpp  PLAMIOSpriteEditor.h
scripts/: build-matrix.ps1  deploy-uf2.ps1
sdk/: PLAMIO.h  PLAMIO_AI_GUIDELINES.md  PLAMIO_GAME_DESIGN_TEMPLATE.md
system/: CMakeLists.txt  PLAMIOConfig.h.in
system/core/: GameCatalog.cpp  GameCatalog.h  System.cpp  System.h
system/hardware/: AudioBase.cpp  AudioBase.h  AudioStub.cpp  AudioStub.h  GraphicsBase.cpp  GraphicsBase.h  InputBase.cpp  InputBase.h  Platform.h  StorageBase.cpp  StorageBase.h  StorageStub.cpp  StorageStub.h
system/platform/pico/: AudioI2S.cpp  AudioI2S.h  AudioPWM.cpp  AudioPWM.h  GpioButtons.cpp  GpioButtons.h  GraphicsILI9341.cpp  GraphicsILI9341.h  GraphicsSSD1306.cpp  GraphicsSSD1306.h  InputGpioButtons.cpp  InputGpioButtons.h  InputPS2.cpp  InputPS2.h  InputSnes.cpp  InputSnes.h  PicoBatteryConfig.h  Platform.cpp  StorageSD.cpp  StorageSD.h  main.cpp
system/platform/pico/boards/: RaspberryPi_Pico.h  RaspberryPi_Pico2.h  WaveShare_RP2040-ZERO.h  WeAct_RP2350B_ILI9341SPI_I2S_SNES_SD.h
system/ui/: CoreRing.cpp  CoreRing.h  SystemUI.cpp  SystemUI.h  SystemUI128x64Mono.cpp  SystemUI128x64Mono.h  SystemUI320x240.cpp  SystemUI320x240.h
system/util/: Collision.cpp  Math.cpp  SaveData.cpp  ScreenShot.cpp  ScreenShot.h  SpinLock.h  Tween.cpp
